src/style.css
/* global styles */
* {
  box-sizing: border-box;
}

html,
body {
  min-height: 100vh;
  margin: 0;
  padding: 0;
  font-family: "Source Sans 3", sans-serif;
  background-color: #ffffff;
  color: #333;
  line-height: 1.6;
}

body {
  display: flex;
  flex-direction: column;
}

html {
  font-size: clamp(14px, 1.2vw, 18px);
}

main {
  flex-grow: 1;
}

.date {
  font-size: 0.85rem;
  text-transform: uppercase;
  letter-spacing: 0.09em;
}

p {
  font-size: clamp(1rem, 1.2vw, 1.125rem);
  letter-spacing: 0.07em;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

/* header styles */
header {
  position: sticky;
  top: 0;
  z-index: 1000;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  height: clamp(4.5rem, 4vw, 5rem);
  background-color: #f5f5f5;
  padding: 0 2rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  display: flex;
  align-items: center;
  gap: 0.6rem;
}

.logo i {
  font-size: 1.5rem;
  color: #1a1a1a;
  display: flex;
  align-items: center;
}

.logo h1 {
  margin: 0;
  font-size: clamp(1.25rem, 1vw, 1.4rem);
  font-weight: 700;
  letter-spacing: -0.1px;
}

.navbar ul {
  list-style: none;
  display: flex;
  gap: 2rem;
  margin: 0;
  padding: 0;
}

.navbar a {
  text-decoration: none;
  color: #333333;
  font-size: clamp(0.875rem, 1vw, 1rem);
  font-weight: 500;
  transition: color 0.3s ease;
}

.navbar a:hover {
  color: #007bff;
}

.navbar a.active {
  border-bottom: 2px solid #007bff;
  color: #007bff;
}

/* banner styles */
.banner {
  display: flex;
  align-items: flex-end;
  width: 100%;
  height: 400px;
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)),
    url("./assets/banner.jpg");
  background-size: cover;
  background-position: center;
  padding: 4rem 0;
  color: #ffffff;
  text-shadow: 0 0.2px 0.8px rgba(0, 0, 0, 0.5);
}

.banner-content {
  display: flex;
  flex-direction: column;
  max-width: 1200px;
  padding: 0 2rem;
}

.banner .date {
  margin-bottom: 0.5rem;
}

.banner h2 {
  max-width: 1020px;
  font-size: clamp(1.65rem, 5vw, 2.5rem);
  font-weight: 800;
  margin: 0.2rem 0;
  line-height: 1.2;
}

.banner p {
  max-width: 800px;
  color: #ffffff;
  margin: 0.3rem 0;
  font-weight: 300;
  opacity: 0.9;
}

/* blog posts styles */
.posts-section {
  padding: 3rem;
}

.posts-grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 3rem 2rem;
  margin-bottom: 3rem;
}

.post {
  display: flex;
  flex-direction: column;
}

.post img {
  width: 100%;
  aspect-ratio: 16 /9;
  object-fit: cover;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.post-content {
  padding: 1rem 0;
  /* flex-grow: 1; */
}

.post-content .date {
  margin-bottom: 0.5rem;
}

.post-content h3 {
  font-size: clamp(1.25rem, 1.5vw, 1.5rem);
  line-height: 1.3;
  font-weight: 700;
  margin: 0.2rem 0;
}

.post-content p {
  margin: 0.5rem 0;
  font-size: 0.95rem;
  color: #666;
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.post-tags-container {
  display: flex;
  justify-content: flex-start;
  padding: 0;
  margin: 0.25rem 0;
  gap: 0.25rem;
  flex-wrap: wrap;
}

.post-tags-container li {
  cursor: pointer;
  list-style: none;
  padding: 2px 8px;
  border-radius: 4px;
  background-color: #e0e0e0;
  color: #555;
  font-weight: 500;
  font-size: 0.7rem;
}

/* view more btn styles */
.view-more-container {
  display: flex;
  justify-content: center;
  padding: 4rem 0;
}

.view-more-btn {
  text-decoration: none;
  color: #333;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 0.9rem;
  letter-spacing: 0.1em;
  border-bottom: 2px solid #333;
  padding-bottom: 4px;
  transition: all 0.2s ease;
}

.view-more-btn:hover {
  color: #007bff;
  border-color: #007bff;
  padding-bottom: 8px;
}

/* footer */
footer {
  width: 100%;
  margin-top: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0.25rem 0;
  background-color: #202020;
  color: #d7d7d7;
}

.footer-mainText {
  font-size: clamp(0.85rem, 1.5vw, 1rem);
  font-weight: 700;
  margin: 0.6rem auto 0.2rem;
}

.footer-copyright {
  font-size: 0.75rem;
  font-weight: 300;
  letter-spacing: 0.5px;
  opacity: 0.8;
  margin: 0 auto 0.6rem;
}

/* About page styles */
.motivation-section h2,
.recent-posts-title {
  position: relative;
  font-size: clamp(1.5rem, 1.5vw, 1.9rem);
  line-height: 1.3;
  font-weight: 700;
  letter-spacing: 0.02em;
  margin: 2rem 0 1.5rem;
  color: #333;
}

.recent-posts-title {
  text-align: center;
}

/* profile section styles */
.profile-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 3rem;
  padding-bottom: 1.5rem;
}

.profile-section img {
  width: 182px;
  aspect-ratio: 1/1;
  object-fit: cover;
  align-self: flex-start;
  border-radius: 50%;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  margin: 1rem 0 2rem;
}

.profile-section h1 {
  max-width: 960px;
  font-size: clamp(1.8rem, 4vw, 2.5rem);
  line-height: 1.2;
  margin-bottom: 1rem;
}

.profile-section p {
  max-width: 960px;
  font-size: clamp(1.2rem, 2vw, 1.3rem);
  line-height: 1.5;
  letter-spacing: -0.01em;
  margin-bottom: 1rem;
  text-align: justify;
}

@media (min-width: 768px) {
  .profile-section {
    max-width: 960px;
    flex-direction: row;
    justify-content: space-between;
    gap: 2rem;
  }

  .profile-section img {
    align-self: center;
  }
}

/* motivation section styles */
.motivation-section {
  max-width: 960px;
  margin: 0 auto;
  padding-bottom: 3rem;
}

.motivation-section h2 {
  text-align: start;
}

.motivation-section p {
  font-size: clamp(1.1rem, 2vw, 1.2rem);
  line-height: 1.8;
  letter-spacing: 0.02em;
  margin-bottom: 1.5rem;
  text-align: justify;
  color: #444;
}

